--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
 /*  your css code here. If applicable */
+/*  your css code here. If applicable */
+/*  your css code here. If applicable */
+#sizeInfo{
+	width: 1000px;
+	height: 1000px;
+}
